<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">SMS &amp; Notifications</string>
    <string name="bluetooth_about_developer" translatable="false">Benno Gröbl</string>
    <string name="bluetooth_about_contact" translatable="false">android@groebl.org</string>
    <string name="version_qksms" translatable="false">3.10.1 / 4.1.1</string>
    <string name="button_add" tools:ignore="MissingTranslation">Add</string>
    <string name="button_no" tools:ignore="MissingTranslation">No</string>
    <string name="settings_category_about_lower" tools:ignore="MissingTranslation">Based on QKSMS/QUIK</string>
    <string name="theme_color" tools:ignore="MissingTranslation">Color</string>
    <string name="title_settings_bluetooth" tools:ignore="MissingTranslation">Bluetooth Settings</string>
    <string name="drawer_feedback" tools:ignore="MissingTranslation">Feedback</string>
    <string name="settings_category_bluetooth_general" tools:ignore="MissingTranslation">General</string>
    <string name="settings_category_bluetooth_more" tools:ignore="MissingTranslation">More settings</string>
    <string name="settings_category_bluetooth_whatsapp" tools:ignore="MissingTranslation">WhatsApp settings</string>
    <string name="settings_category_bluetooth_telegram" tools:ignore="MissingTranslation">Telegram settings</string>
    <string name="settings_category_bluetooth_signal" tools:ignore="MissingTranslation">Signal settings</string>
    <string name="settings_category_bluetooth_threema" tools:ignore="MissingTranslation">Threema settings</string>
    <string name="settings_category_bluetooth_other" tools:ignore="MissingTranslation">Other settings</string>
    <string name="settings_category_bluetooth_system" tools:ignore="MissingTranslation">System settings</string>
    <string name="drawer_bluetoothsettings" tools:ignore="MissingTranslation">Bluetooth Settings</string>
    <string name="settings_bluetooth_enabled_title" tools:ignore="MissingTranslation">Enable</string>
    <string name="settings_bluetooth_enabled_summary" tools:ignore="MissingTranslation">Enable the Notification forwarding</string>
    <string name="settings_bluetooth_connected_title" tools:ignore="MissingTranslation">Only with Bluetooth Connection</string>
    <string name="settings_bluetooth_connected_summary" tools:ignore="MissingTranslation">Only forward messages when connected over Bluetooth. Disable for BLE-Devices (e.g. Smartwatches)</string>
    <string name="settings_bluetooth_apps_title" tools:ignore="MissingTranslation">Application White List</string>
    <string name="settings_bluetooth_apps_summary" tools:ignore="MissingTranslation">Select the apps, from which notifications get forwarded</string>
    <string name="settings_bluetooth_apps_loading" tools:ignore="MissingTranslation">Loading your apps&#8230;</string>
    <string name="settings_bluetooth_apps_search" tools:ignore="MissingTranslation">Search&#8230;</string>
    <string name="settings_bluetooth_delete_title" tools:ignore="MissingTranslation">Delete Messages</string>
    <string name="settings_bluetooth_delete_summary" tools:ignore="MissingTranslation">Delete the temporary Notification-Messages on a Bluetooth disconnect</string>
    <string name="settings_bluetooth_devices_title" tools:ignore="MissingTranslation">Select Bluetooth-Device</string>
    <string name="settings_bluetooth_devices_summary" tools:ignore="MissingTranslation">Choose the devices, where the notification forwarding should be enabled on connecting (e.g. the Car)</string>
    <string name="settings_bluetooth_device_status_connected" tools:ignore="MissingTranslation">Connected with %1$s since %2$s</string>
    <string name="settings_bluetooth_device_status_disconnected" tools:ignore="MissingTranslation">Disconnected from %1$s since %2$s</string>
    <string name="settings_bluetooth_markasread_title" tools:ignore="MissingTranslation">Save messages as read</string>
    <string name="settings_bluetooth_markasread_summary" tools:ignore="MissingTranslation">Deactivate if encounter problems (mostly on Samsung-Devices)</string>
    <string name="settings_bluetooth_markasread_delayed_title" tools:ignore="MissingTranslation">Delayed Mark-as-Read</string>
    <string name="settings_bluetooth_markasread_delayed_summary" tools:ignore="MissingTranslation">Enable this if you get empty messages (mostly on Samsung devices with Android 5 and Android 6)</string>
    <string name="settings_bluetooth_emoji_title" tools:ignore="MissingTranslation">Replace Emojis</string>
    <string name="settings_bluetooth_emoji_summary" tools:ignore="MissingTranslation">Replace the □ Emojis with their description-text</string>
    <string name="settings_bluetooth_showname_title" tools:ignore="MissingTranslation">Show App-Name as Sender</string>
    <string name="settings_bluetooth_showname_summary" tools:ignore="MissingTranslation">Not supported for most of the devices</string>
    <string name="settings_bluetooth_shownumber_title" tools:ignore="MissingTranslation">Show App-Name as unique number</string>
    <string name="settings_bluetooth_shownumber_summary" tools:ignore="MissingTranslation">Assign a unique dummy number for every App</string>
    <string name="settings_bluetooth_max_vol_title" tools:ignore="MissingTranslation">Increase Bluetooth-Volume</string>
    <string name="settings_bluetooth_max_vol_summary" tools:ignore="MissingTranslation">Set the Bluetooth-Volume to 100% when playing music over the selected Bluetooth-Devices</string>
    <string name="settings_bluetooth_block_group_title" tools:ignore="MissingTranslation">Exclude %s groups</string>
    <string name="settings_bluetooth_tethering_title" tools:ignore="MissingTranslation">Bluetooth-Tethering</string>
    <string name="settings_bluetooth_tethering_summary" tools:ignore="MissingTranslation">Enable Bluetooth-Tethering when connected to the selected Bluetooth-Device (only until Android 10)</string>
    <string name="settings_bluetooth_tethering_dialog" tools:ignore="MissingTranslation">To enable this option you need to permit %s to modify system settings</string>
    <string name="settings_bluetooth_message_realm_title" tools:ignore="MissingTranslation">Hide temporary messages</string>
    <string name="settings_bluetooth_message_realm_summary" tools:ignore="MissingTranslation">Hide the temporary messages in the Inbox of this app</string>
    <string name="settings_bluetooth_androidauto_title" tools:ignore="MissingTranslation">Android Auto Support</string>
    <string name="settings_bluetooth_androidauto_summary" tools:ignore="MissingTranslation">Display the temporary messages in Android-Auto (experimental)</string>
    <string name="settings_bluetooth_whatsapp_to_contact_title" tools:ignore="MissingTranslation">Assign WhatsApp-Messages</string>
    <string name="settings_bluetooth_whatsapp_to_contact_summary" tools:ignore="MissingTranslation">Show the contact-name/-number from the sender of the WhatsApp-Message</string>
    <string name="settings_bluetooth_whatsapp_hide_prefix_title" tools:ignore="MissingTranslation">Hide WhatsApp-Prefix</string>
    <string name="settings_bluetooth_whatsapp_hide_prefix_summary" tools:ignore="MissingTranslation">Hide the \'WhatsApp\'-Prefix in front of the messages</string>
    <string name="settings_bluetooth_signal_to_contact_title" tools:ignore="MissingTranslation">Assign Signal-Messages</string>
    <string name="settings_bluetooth_signal_to_contact_summary" tools:ignore="MissingTranslation">Show the contact name from the sender of the Signal-Message if possible</string>
    <string name="settings_bluetooth_signal_hide_prefix_title" tools:ignore="MissingTranslation">Hide Signal-Prefix</string>
    <string name="settings_bluetooth_signal_hide_prefix_summary" tools:ignore="MissingTranslation">Hide the \'Signal\'-Prefix in front of the messages</string>
    <string name="settings_bluetooth_telegram_to_contact_title" tools:ignore="MissingTranslation">Assign Telegram-Messages</string>
    <string name="settings_bluetooth_telegram_to_contact_summary" tools:ignore="MissingTranslation">Show the contact name from the sender of the Telegram-Message if possible</string>
    <string name="settings_bluetooth_telegram_hide_prefix_title" tools:ignore="MissingTranslation">Hide Telegram-Prefix</string>
    <string name="settings_bluetooth_telegram_hide_prefix_summary" tools:ignore="MissingTranslation">Hide the \'Telegram\'-Prefix in front of the messages</string>
    <string name="settings_bluetooth_threema_hide_prefix_title" tools:ignore="MissingTranslation">Hide Threema-Prefix</string>
    <string name="settings_bluetooth_threema_hide_prefix_summary" tools:ignore="MissingTranslation">Hide the \'Threema\'-Prefix in front of the messages</string>
    <string name="settings_bluetooth_block_whatsapp_group_title" tools:ignore="MissingTranslation">Exclude WhatsApp groups</string>
    <string name="settings_bluetooth_block_whatsapp_group_summary" tools:ignore="MissingTranslation">WhatsApp-Messages from the following groups will not be forwarded</string>
    <string name="settings_bluetooth_block_whatsapp_contact_title" tools:ignore="MissingTranslation">Exclude WhatsApp contacts</string>
    <string name="settings_bluetooth_block_whatsapp_contact_summary" tools:ignore="MissingTranslation">WhatsApp-Messages from the following contacts will not be forwarded</string>
    <string name="settings_bluetooth_block_signal_group_title" tools:ignore="MissingTranslation">Exclude Signal groups</string>
    <string name="settings_bluetooth_block_signal_group_summary" tools:ignore="MissingTranslation">Signal-Messages from the following groups will not be forwarded</string>
    <string name="settings_bluetooth_block_signal_contact_title" tools:ignore="MissingTranslation">Exclude Signal contacts</string>
    <string name="settings_bluetooth_block_signal_contact_summary" tools:ignore="MissingTranslation">Signal-Messages from the following contacts will not be forwarded</string>
    <string name="settings_bluetooth_block_telegram_group_title" tools:ignore="MissingTranslation">Exclude Telegram groups</string>
    <string name="settings_bluetooth_block_telegram_group_summary" tools:ignore="MissingTranslation">Telegram-Messages from the following groups will not be forwarded</string>
    <string name="settings_bluetooth_block_telegram_contact_title" tools:ignore="MissingTranslation">Exclude Telegram contacts</string>
    <string name="settings_bluetooth_block_telegram_contact_summary" tools:ignore="MissingTranslation">Telegram-Messages from the following contacts will not be forwarded</string>
    <string name="settings_bluetooth_block_threema_group_title" tools:ignore="MissingTranslation">Exclude Threema groups</string>
    <string name="settings_bluetooth_block_threema_group_summary" tools:ignore="MissingTranslation">Threema-Messages from the following groups will not be forwarded</string>
    <string name="settings_bluetooth_block_threema_contact_title" tools:ignore="MissingTranslation">Exclude Threema contacts</string>
    <string name="settings_bluetooth_notification_access_title" tools:ignore="MissingTranslation">Notification Access</string>
    <string name="settings_bluetooth_battery_title" tools:ignore="MissingTranslation">Battery Optimization</string>
    <string name="settings_bluetooth_battery_summary" tools:ignore="MissingTranslation">If the forwarding stopped working after a time, check your autostart/power-saving options</string>
    <string name="settings_bluetooth_donate" tools:ignore="MissingTranslation">Donate</string>
    <string name="info_name">Conversation title</string>
    <string name="info_notifications">Notifications</string>
    <string name="info_archive">Archive</string>
    <string name="info_block">Block</string>
    <string name="info_delete">Delete conversation</string>
    <string name="about_title">About</string>
</resources>