<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:id="@+id/contentView"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/windowBackground">

    <LinearLayout
        android:id="@+id/bluetooth_menu_full"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="8dp"
        android:paddingTop="8dp">

        <org.groebl.sms.common.widget.PreferenceView
            android:id="@+id/bluetooth_enabled"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:summary="@string/settings_bluetooth_enabled_summary"
            app:title="@string/settings_bluetooth_enabled_title"
            app:icon="@drawable/ic_bluetooth_black_24dp"
            app:widget="@layout/settings_switch_widget" />

        <LinearLayout
            android:id="@+id/bluetooth_menu_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:background="?android:attr/divider" />

            <org.groebl.sms.common.widget.QkTextView
                style="@style/PreferenceCategory"
                android:text="@string/settings_category_bluetooth_general" />

            <org.groebl.sms.common.widget.PreferenceView
                android:id="@+id/bluetooth_only_on_connect"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:summary="@string/settings_bluetooth_connected_summary"
                app:title="@string/settings_bluetooth_connected_title"
                app:icon="@drawable/ic_bluetooth_connected_24px"
                app:widget="@layout/settings_switch_widget" />

            <org.groebl.sms.common.widget.PreferenceView
                android:id="@+id/bluetooth_device_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <org.groebl.sms.common.widget.PreferenceView
                android:id="@+id/bluetooth_autodelete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:summary="@string/settings_bluetooth_delete_summary"
                app:title="@string/settings_bluetooth_delete_title"
                app:icon="@drawable/ic_bluetooth_delete_24px"
                app:widget="@layout/settings_switch_widget" />

            <org.groebl.sms.common.widget.PreferenceView
                android:id="@+id/bluetooth_select_device"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:summary="@string/settings_bluetooth_devices_summary"
                app:title="@string/settings_bluetooth_devices_title"
                app:widget="@layout/settings_chevron_widget"
                app:icon="@drawable/ic_bluetooth_car_signal_24px" />

            <org.groebl.sms.common.widget.PreferenceView
                android:id="@+id/bluetooth_allowed_apps"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:summary="@string/settings_bluetooth_apps_summary"
                app:title="@string/settings_bluetooth_apps_title"
                app:widget="@layout/settings_chevron_widget"
                app:icon="@drawable/ic_bluetooth_apps_24px" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:background="?android:attr/divider" />

            <org.groebl.sms.common.widget.QkTextView
                style="@style/PreferenceCategory"
                android:text="@string/settings_category_bluetooth_more" />

            <org.groebl.sms.common.widget.PreferenceView
                android:id="@+id/bluetooth_save_read"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:summary="@string/settings_bluetooth_markasread_summary"
                app:title="@string/settings_bluetooth_markasread_title"
                app:icon="@drawable/ic_drafts_black_24dp"
                app:widget="@layout/settings_switch_widget" />

            <org.groebl.sms.common.widget.PreferenceView
                android:id="@+id/bluetooth_delayed_read"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:summary="@string/settings_bluetooth_markasread_delayed_summary"
                app:title="@string/settings_bluetooth_markasread_delayed_title"
                app:icon="@drawable/ic_bluetooth_timer_24px"
                app:widget="@layout/settings_switch_widget" />

            <org.groebl.sms.common.widget.PreferenceView
                android:id="@+id/bluetooth_emoji"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:summary="@string/settings_bluetooth_emoji_summary"
                app:title="@string/settings_bluetooth_emoji_title"
                app:icon="@drawable/ic_bluetooth_emoji_24px"
                app:widget="@layout/settings_switch_widget" />

            <org.groebl.sms.common.widget.PreferenceView
                android:id="@+id/bluetooth_appname_as_sender_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:summary="@string/settings_bluetooth_showname_summary"
                app:title="@string/settings_bluetooth_showname_title"
                app:icon="@drawable/ic_bluetooth_contact_mail_24px"
                app:widget="@layout/settings_switch_widget" />

            <org.groebl.sms.common.widget.PreferenceView
                android:id="@+id/bluetooth_appname_as_sender_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:summary="@string/settings_bluetooth_shownumber_summary"
                app:title="@string/settings_bluetooth_shownumber_title"
                app:icon="@drawable/ic_bluetooth_contact_phone_24px"
                app:widget="@layout/settings_switch_widget" />

            <View
                android:id="@+id/bluetooth_whatsapp_divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:background="?android:attr/divider" />

            <org.groebl.sms.common.widget.QkTextView
                style="@style/PreferenceCategory"
                android:id="@+id/bluetooth_whatsapp_category"
                android:text="@string/settings_category_bluetooth_whatsapp" />

            <org.groebl.sms.common.widget.PreferenceView
                android:id="@+id/bluetooth_whatsapp_to_contact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:summary="@string/settings_bluetooth_whatsapp_to_contact_summary"
                app:title="@string/settings_bluetooth_whatsapp_to_contact_title"
                app:icon="@drawable/ic_bluetooth_whatsapp_24px"
                app:widget="@layout/settings_switch_widget" />


            <org.groebl.sms.common.widget.PreferenceView
                android:id="@+id/bluetooth_whatsapp_hide_prefix"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:summary="@string/settings_bluetooth_whatsapp_hide_prefix_summary"
                app:title="@string/settings_bluetooth_whatsapp_hide_prefix_title"
                app:icon="@drawable/ic_bluetooth_list_24px"
                app:widget="@layout/settings_switch_widget" />

            <org.groebl.sms.common.widget.PreferenceView
                android:id="@+id/bluetooth_whatsapp_blocked_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:summary="@string/settings_bluetooth_block_whatsapp_group_summary"
                app:title="@string/settings_bluetooth_block_whatsapp_group_title"
                app:icon="@drawable/ic_bluetooth_group_24px" />

            <org.groebl.sms.common.widget.PreferenceView
                android:id="@+id/bluetooth_whatsapp_blocked_contact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:summary="@string/settings_bluetooth_block_whatsapp_contact_summary"
                app:title="@string/settings_bluetooth_block_whatsapp_contact_title"
                app:icon="@drawable/ic_bluetooth_person_24px" />


            <View
                android:id="@+id/bluetooth_signal_divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:background="?android:attr/divider" />

            <org.groebl.sms.common.widget.QkTextView
                style="@style/PreferenceCategory"
                android:id="@+id/bluetooth_signal_category"
                android:text="@string/settings_category_bluetooth_signal" />

            <org.groebl.sms.common.widget.PreferenceView
                android:id="@+id/bluetooth_signal_to_contact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:icon="@drawable/ic_bluetooth_signal_24px"
                app:summary="@string/settings_bluetooth_signal_to_contact_summary"
                app:title="@string/settings_bluetooth_signal_to_contact_title"
                app:widget="@layout/settings_switch_widget" />

            <org.groebl.sms.common.widget.PreferenceView
                android:id="@+id/bluetooth_signal_hide_prefix"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:summary="@string/settings_bluetooth_signal_hide_prefix_summary"
                app:title="@string/settings_bluetooth_signal_hide_prefix_title"
                app:icon="@drawable/ic_bluetooth_list_24px"
                app:widget="@layout/settings_switch_widget" />

            <org.groebl.sms.common.widget.PreferenceView
                android:id="@+id/bluetooth_signal_blocked_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:summary="@string/settings_bluetooth_block_signal_group_summary"
                app:title="@string/settings_bluetooth_block_signal_group_title"
                app:icon="@drawable/ic_bluetooth_group_24px" />

            <org.groebl.sms.common.widget.PreferenceView
                android:id="@+id/bluetooth_signal_blocked_contact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:summary="@string/settings_bluetooth_block_signal_contact_summary"
                app:title="@string/settings_bluetooth_block_signal_contact_title"
                app:icon="@drawable/ic_bluetooth_person_24px" />

            <View
                android:id="@+id/bluetooth_telegram_divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:background="?android:attr/divider" />

            <org.groebl.sms.common.widget.QkTextView
                style="@style/PreferenceCategory"
                android:id="@+id/bluetooth_telegram_category"
                android:text="@string/settings_category_bluetooth_telegram" />

            <org.groebl.sms.common.widget.PreferenceView
                android:id="@+id/bluetooth_telegram_to_contact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:icon="@drawable/ic_bluetooth_telegram_24px"
                app:summary="@string/settings_bluetooth_telegram_to_contact_summary"
                app:title="@string/settings_bluetooth_telegram_to_contact_title"
                app:widget="@layout/settings_switch_widget" />

            <org.groebl.sms.common.widget.PreferenceView
                android:id="@+id/bluetooth_telegram_hide_prefix"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:summary="@string/settings_bluetooth_telegram_hide_prefix_summary"
                app:title="@string/settings_bluetooth_telegram_hide_prefix_title"
                app:icon="@drawable/ic_bluetooth_list_24px"
                app:widget="@layout/settings_switch_widget" />

            <org.groebl.sms.common.widget.PreferenceView
                android:id="@+id/bluetooth_telegram_blocked_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:summary="@string/settings_bluetooth_block_telegram_group_summary"
                app:title="@string/settings_bluetooth_block_telegram_group_title"
                app:icon="@drawable/ic_bluetooth_group_24px" />

            <org.groebl.sms.common.widget.PreferenceView
                android:id="@+id/bluetooth_telegram_blocked_contact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:summary="@string/settings_bluetooth_block_telegram_contact_summary"
                app:title="@string/settings_bluetooth_block_telegram_contact_title"
                app:icon="@drawable/ic_bluetooth_person_24px" />

            <View
                android:id="@+id/bluetooth_more_divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:background="?android:attr/divider" />

            <org.groebl.sms.common.widget.QkTextView
                style="@style/PreferenceCategory"
                android:id="@+id/bluetooth_more_cat"
                android:text="@string/settings_category_bluetooth_other" />

            <org.groebl.sms.common.widget.PreferenceView
                android:id="@+id/bluetooth_max_vol"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:summary="@string/settings_bluetooth_max_vol_summary"
                app:title="@string/settings_bluetooth_max_vol_title"
                app:icon="@drawable/ic_bluetooth_volume_24px"
                app:widget="@layout/settings_switch_widget" />

            <org.groebl.sms.common.widget.PreferenceView
                android:id="@+id/bluetooth_tethering"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:summary="@string/settings_bluetooth_tethering_summary"
                app:title="@string/settings_bluetooth_tethering_title"
                app:icon="@drawable/ic_bluetooth_tethering_24px"
                app:widget="@layout/settings_switch_widget" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:background="?android:attr/divider" />

        <org.groebl.sms.common.widget.QkTextView
            android:id="@+id/bluetooth_category_system"
            style="@style/PreferenceCategory"
            android:text="@string/settings_category_bluetooth_system" />

        <org.groebl.sms.common.widget.PreferenceView
            android:id="@+id/bluetooth_notification_access"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:icon="@drawable/ic_bluetooth_notification_24px"
            app:title="@string/settings_bluetooth_notification_access_title" />

        <org.groebl.sms.common.widget.PreferenceView
            android:id="@+id/bluetooth_battery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/settings_bluetooth_battery_title"
            app:summary="@string/settings_bluetooth_battery_summary"
            app:icon="@drawable/ic_bluetooth_power_24px" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:background="?android:attr/divider" />
        <!--
                <org.groebl.sms.common.widget.PreferenceView
                android:id="@+id/bluetooth_faq"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:icon="@drawable/ic_help_black_24dp"
                app:title="@string/settings_bluetooth_faq_title" />
        -->
        <org.groebl.sms.common.widget.PreferenceView
            android:id="@+id/bluetooth_donate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:icon="@drawable/ic_bluetooth_gift_24px"
            app:widget="@layout/settings_chevron_widget"
            app:title="@string/settings_bluetooth_donate" />

        <org.groebl.sms.common.widget.PreferenceView
            android:id="@+id/bluetooth_about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:icon="@drawable/ic_info_black_24dp"
            app:widget="@layout/settings_chevron_widget"
            app:title="@string/about_title" />

    </LinearLayout>

</ScrollView>
